fix layout bug (#682)

--- a/src/components/CategoriesMenu/CategoriesMenu.scss
+++ b/src/components/CategoriesMenu/CategoriesMenu.scss
@@ -4,7 +4,7 @@
   position: relative;
   display: none;
   margin-top: 2rem;
-  z-index: 3;
+  z-index: 10;
 
   @media (min-width: $lg) {
     display: flex;
